Fixed wording, spelling and style

--- a/Annual Review 2019 Report/OneYearReport 0.3.tex
+++ b/Annual Review 2019 Report/OneYearReport 0.3.tex
@@ -192,7 +192,7 @@ Related to this, the variables being decided on are the gate times of the tasks,
 
 This leads me to a major limitation of this research. While the monetary value of the project is presented as the main focus, there is no mention of any positive cashflow starting when the project is partly done, nor are there any deadlines for milestones mentioned (such as when the first 10\% or 50\% of the WTGs are operational). Therefore the only positive value considered in the objective is the fixed value of the project upon completion, subject to discount rates. For research so focused on the financial perspective, not incorporating the possibility of early positive cashflows seems like a big gap, and a possible improvement for future research.
 
-The actual methods used in the research are simulation and optimisation (primarily through local search). For the local search, two types of genes are used to represent restrictions of time periods in which certain activity types can be performed. For example, a gene could restrict all activities between December and February, and only allow for certain activities (less susceptible to weather) between September and November. The difference between the two gene types is that one type distinguishes between the years and the other does not (the former might have different weather restrictions for the first July and the second July of the project, while the latter sees them as the same). A simulated annealing algorithm is used to optimise the values of the genes, which are then converted into gate times (through a fairly straightforward algorithm) and tested in a simulation where the net present value of the project is calculated over several runs with different weather series. As an alternative to the local search, a heuristic is used where all activities are seen as the same type and a set of consecutive months to totally halt all execution are identified. Since there is only one month as the start of the `break' and one month as it's end, there are only $12^2 = 144$ combinations, which are all tested in simulation. In the case study for which experiments were run, this dedicated search outperformed both variations of local search. A way to possibly improve this optimisation is to first use the dedicated search to identify regions of the solution space which yield good results, and then use the best results of this search as starting solutions for the local search (where activity types are taken into consideration again). 
+The actual methods used in the research are simulation and optimisation (primarily through local search). For the local search, two types of genes are used to represent restrictions of time periods in which certain activity types can be performed. For example, a gene could restrict all activities between December and February, and only allow for certain activities (less susceptible to weather) between September and November. The difference between the two gene types is that one type distinguishes between the years and the other does not (the former might have different weather restrictions for the first July and the second July of the project, while the latter sees them as the same). A simulated annealing algorithm is used to optimise the values of the genes, which are then converted into gate times (through a fairly straightforward algorithm) and tested in a simulation where the net present value of the project is calculated over several runs with different weather series. As an alternative to the local search, a heuristic is used where all activities are seen as the same type and a set of consecutive months to totally halt all execution are identified. Only two values need to be determined; the start and the end of the `break'. This reduces the solution space to a set which size is quadratic in the number of discreet periods examined, usually months. Hence the solution space does not exceed $12^2 = 144$ possible combinations, which are all tested in simulation. In the case study for which experiments were run, this dedicated search outperformed both variations of local search. A way to possibly improve this optimisation is to first use the dedicated search to identify regions of the solution space which yield good results, and then use the best results of this search as starting solutions for the local search (where activity types are taken into consideration again). 
 
 Another limitation of this paper are the genes, which are fairly high level. They determine which (category of) tasks can be performed in which month, but determining the schedule on a more detailed timescale can likely lead to much better results. A conversion algorithm is used to generate gate times for each task based on any given chromosome, but it is very simplistic. Every task is placed immediately after all preceding tasks should be completed if there are no weather delays. This is then tested with a single simulation, and if any task executions violate the given chromosome the gate time of that task is shifted forward to the next eligible period. This seems like a very simplistic method to use (as the genes operate on a much larger timescale than the gate times) and leads me to think improvement might be very beneficial.
 
@@ -250,7 +250,7 @@ In the above literature, two main types of methods are used for this problem; op
 \bigskip
 
 \subsubsection{Simulation} \label{sss:sim}
-Simulation, especially Discrete Event Simulation, is a good method to evaluate the strength of a proposed schedule under uncertain circumstances. If enough simulations are run, an accurate view of the realistic duration of a schedule can be gained. This does not only mean expected (average) duration, but also for example a confidence interval for the extreme cases. This does however have two big bottlenecks; the information gained through simulation can only be as precise as the weather model used for it, and doing enough simulations can take considerable time. 
+Simulation, especially Discrete Event Simulation, is a common and effective method to evaluate the strength of a proposed schedule under uncertain circumstances. If enough simulations are run, an accurate view of the realistic duration of a schedule can be gained. This does not only mean expected (average) duration, but also for example a confidence interval for the extreme cases. This does however have two big bottlenecks; the information gained through simulation can only be as precise as the weather model used for it, and doing enough simulations can take considerable time. 
 
 \bigskip
 
@@ -266,7 +266,7 @@ Another method we are considering to explore relates more to robust optimisation
 
 \bigskip
 
-The other bottleneck, that of the considerable time it will take to run enough simulations, is something that will need to be taken into consideration for any research project using simulation. There are several methods to reduce the time used if necessary. A rigorous but effective step is is increasing the size of a timestep. This reduces accuracy, but does significantly reduce calculation time as well. Another is to carefully select input so less simulations need to be run for precision, as was discussed above. Using a robust approach could potentially reduce the number of required simulations, as the robust inputs are constructed to explore important situations, instead of random inputs which require a lot of simulations to construct an accurate average. 
+The other bottleneck, that of the considerable time it will take to run enough simulations, is something that will need to be taken into consideration for any research project using simulation. There are several methods to reduce the time used if necessary. A rigorous but effective step is increasing the size of a timestep. This reduces accuracy, but does significantly reduce calculation time as well. Another is to carefully select input so less simulations need to be run for precision, as was discussed above. Using a robust approach could potentially reduce the number of required simulations, as the robust inputs are constructed to explore important situations, instead of random inputs which require a lot of simulations to construct an accurate average. 
 
 There are many other possible methods to reduce number of simulations required, and which to apply depends on the specific research project and goals, and how much speed is needed. This is something we are aware of for when experiments will be done in the future. 
 
@@ -277,7 +277,7 @@ Optimisation, in particular through (mixed-)integer programming, is an essential
 
 Even linear and integer programming models computationally complex to solve, hence many methods are used to reduce to complexity of the models. There are standard techniques like Lagrangian relaxation \cite{fisher1981lagrangian} and column generation \cite{barnhart1998branch}, but there are more specific methods used as well. The primary way this is done is by limiting the scope of individual optimisation problems (not necessarily the research), by splitting up the research and using multi-level optimisation models, or using simulation for certain parts of it. 
 
-Another method has been discussed before already; robust optimisation. As with Simulation, this reduces the number of considered inputs (primarily weather states, but also task duration which is sometimes stochastic) by only considering certain constructed uncertainty sets. This strongly reduces the number of situations considered in the optimisation. 
+Another method has been discussed before already; robust optimisation. As with simulation, this reduces the number of considered inputs (primarily weather states, but also task duration which is sometimes stochastic) by only considering certain constructed uncertainty sets. This strongly reduces the number of situations considered in the optimisation. 
 
 There are alternatives to computational programming. The most prominent is local search. A benefit of local search is that reasonably good results can often be found fairly quick, but this is connected to the main drawback of local search; it can often be difficult to get out of local optima. However, there is a lot of literature on local search and many variants designed to reduce its drawbacks. 
 
@@ -288,7 +288,7 @@ Alternatively, evolutionary algorithms have been used for deterministic scheduli
 \section{Simulation tool} \label{s:sim}
 In addition to getting caught up with the literature, I have also laid the foundations for some practical experiments. I have programmed the basics of an adaptable simulator from scratch. It is not yet operational and not very developed so far, but it can easily be expanded upon to fit future research. The use of this simulator would be checking feasibility of a generated schedule and analyzing the impacts of uncertain factors of the project.
 
-It was implemented in C++, as it seems well suited for this and I have previously used this language. A benefit of C++ is that it's a very commonly used language so modules are available for a lot of things I might want to add to the simulator, and it could potentially be integrated with other languages like Matlab if there is a need for that in the future. 
+It was implemented in C++, as it seems well suited for this and I have previously used this language. A benefit of C++ is that it is a very commonly used language so modules are available for a lot of things I might want to add to the simulator, and it could potentially be integrated with other languages like Matlab if there is a need for that in the future. 
 
 In this section I will first describe the current progress of the simulator and some failed previous attempts at programming it. Afterwards, I will outline my plans for what the simulator will be in the future of this research.
 
@@ -299,7 +299,7 @@ This is repeated for every vessel and task, until that vessel has completed all 
 
 \bigskip
 
-As of yet, this is clearly a rather bare-bones setup. However, everything is programmed to be expandable, and I have plans on how to make this model more useful. How I plan to do this I will explain in \Cref{ss:simfut} but for now I would like to make a remark on previous failed attempts to program this. In my first attempt, I did not actually simulate different vessels and simply had a count of how many vessels were available. After some simple test cases two major problems with this approach emerged. The first is that each vessel necessarily had to be identical. While they currently are still identical, in my current setup they could easily be given different characteristics. The second problem was that there was not a set of tasks per vessel, and simply a common pool of tasks. This meant that transition between locations could not be a task, as this task would necessarily have to be completed by the same vessels doing the operations at these locations. Another problem with this restriction is that is is simply impractical in reality; the tasks a vessel will complete have to be mostly predetermined for the sake of supplies.
+As of yet, this is clearly a rather bare-bones setup. However, everything is programmed to be expandable, and I have plans on how to make this model more useful. How I plan to do this I will explain in \Cref{ss:simfut} but for now I would like to make a remark on previous failed attempts to program this. In my first attempt, I did not actually simulate different vessels and simply had a count of how many vessels were available. After some simple test cases two major problems with this approach emerged. The first is that each vessel necessarily had to be identical. While they currently are still identical, in my current setup they could easily be given different characteristics. The second problem was that there was not a set of tasks per vessel, and simply a common pool of tasks. This meant that transition between locations could not be a task, as this task would necessarily have to be completed by the same vessels doing the operations at these locations. Another problem with this restriction is that it is simply impractical in reality; the tasks a vessel will complete have to be mostly predetermined for the sake of supplies.
 
 After realising this I effectively started over with this new vessel structure in mind. There were some other problems during this attempt; for example the realised duration of a task (taking into account both natural delay and weather-based delay) was decided at the moment it was started. The problem with this is that tasks taking a long time can experience very different weather conditions while it is in progress. The weather-based delay was decided at the moment the task was started with the weather conditions at that moment. While in the current implementation there is no weather delay, I ended up changing to my previously described set up to allow for the duration of a task to be influenced by weather during its entire duration and not just at its start. In general, I believe that my current model is very adaptable, and the changes described in \Cref{ss:simfut} can be implemented without changing the primary structure of the simulator. 
 
@@ -315,7 +315,7 @@ Technically, this is all the input that is required, as vessel characteristics w
 
 The aspect of cost should also be included as one of the desired output metrics will be the cost of the project. All costs and profits will be subject to a discount rate. For the on-site operations, a supply cost should be included, which is incurred during the loading task preceding that operation. Additionally any extra costs charged by the vessel provider for certain types of operations should also be included. The day rates and (de)commissioning costs of vessels will be part of the input. A mechanism can be put in place that only allows for vessels to be (de)commissioned when given notice or at certain moments. How exactly this works can be determined in the input file, through a selection of settings. To oppose the costs, the profit gained from a working WTG should also be given. This profit will initially be represented as a flat rate per WTG based on the month of the year. A potential future improvement is to make it depended on the actual simulated wind speeds, but this is not currently planned to be experimented with in this research. Other basic simulation settings will also be part of the input, such as the number of simulations to run and the type of output to give.
 
-Additional an input signifying the start date of the project is useful. This matters for the weather simulation, as it is dependent on the time of year. This could be done through an initial task with a release date on the desired start date, but by giving a specific start date for the project all other release dates can be made relative to it, which is convenient when a single schedule is to be tested with various start dates. Potentially I can also add inputs for non-operational periods; for example if we want to pause operations over the most severe winter months. However I am not currently planning on adding that specifically; these experiments can still be done, but through the start dates of tasks. For example if a project will be performed over two summers, but the work will be halted during the winter in between, every task scheduled to be performed in the second summer can simply have a starting date after operations resume. This allows tasks in the first summer to be completed even if they take longer than the planned start of the break. However if it turns out it is desired to have a hard cutoff point after which all operations will halt even if they were planned to be completed in the previous phase of the project, this functionality can be added. 
+Additionally an input signifying the start date of the project is useful. This matters for the weather simulation, as it is dependent on the time of year. This could be done through an initial task with a release date on the desired start date, but by giving a specific start date for the project all other release dates can be made relative to it, which is convenient when a single schedule is to be tested with various start dates. Potentially I can also add inputs for non-operational periods; for example if we want to pause operations over the most severe winter months. However I am not currently planning on adding that specifically; these experiments can still be done, but through the start dates of tasks. For example if a project will be performed over two summers, but the work will be halted during the winter in between, every task scheduled to be performed in the second summer can simply have a starting date after operations resume. This allows tasks in the first summer to be completed even if they take longer than the planned start of the break. However if it turns out it is desired to have a hard cutoff point after which all operations will halt even if they were planned to be completed in the previous phase of the project, this functionality can be added. 
 
 The main output is data regarding the variability of both the costs and makespan of a given project (installation or maintenance). Probabilistic measures on the cost and duration on the project will be recorded over all simulations. These can be used to focus in on vulnerable aspects and look at the expected time and cost certain phases of the project will take (for example, a 90\% confidence interval on when 10\% of the WTGs will be online). Focusing in on measures for categories of tasks will also be possible, like every task performed by a certain vessel or of a specific type. Specific cost related measures will also be able to be found, such as the expected time the project becomes profitable, the net present value of the project, and exact data on the spending and profit every month. 
 
@@ -343,7 +343,7 @@ Create an integrated optimisation and simulation model spanning the entire life-
 
 \subobjone*
 
-Effectively this would come down to combining the two models inspired by the models discussed in  \Cref{sss:sched}, in which I took two focus papers and discussed strengths and weaknesses of both. My hope is to make a hybrid of these two approaches and highlight their strengths. Both approaches used both simulation and optimisation together, and I am to do the same. A focus on cashflows seems to be a good approach (as it will always be of interest to the project developer), but it should incorporate positive cashflows from partial completion, as well as possible milestone deadlines. Given this approach, it seems an investigation into both start date and non-operational periods would be beneficial. A dedicated heuristic (as in \cite{kerkhove2017optimised}) could be used (where all activity types and years are treated equally) as base solutions, to then be potentially improved with a local search. However, this is not the only optimisation that should be performed. A restriction on which activities can be completed in which time periods is a starting point from which more detailed scheduling should occur. For each period a set of desired vessels should be determined, keeping in mind costs of (de)commissioning vessels and restrictions on timespans for that. A schedule should be made for each vessel such that each task is assigned a vessel and a timeslot. For this there are various optimisation techniques possible. The basic one to go to would be trying to solve a integer program, in which task durations can be the expected time within a time period (month) based on expected weather. A solution would then have to be checked through simulation, and the simulator described in \Cref{s:sim} is designed to be used for this. This may be difficult to do in a way that is computationally feasible in a reasonable time, but that is one of the challenges of this research, and there is a lot of literature on improving simulations when necessary. However, if this turns out to not be feasible there are alternatives for the optimisation technique that might speed up the process. 
+Effectively this would come down to combining the two models inspired by the models discussed in  \Cref{sss:sched}, in which I took two focus papers and discussed strengths and weaknesses of both. My hope is to make a hybrid of these two approaches and highlight their strengths. Both approaches used both simulation and optimisation together, and I am to do the same. A focus on cashflows seems to be a good approach (as it will always be of interest to the project developer), but it should incorporate positive cashflows from partial completion, as well as possible milestone deadlines. Given this approach, it seems an investigation into both start date and non-operational periods would be beneficial. A dedicated heuristic (as in \cite{kerkhove2017optimised}) could be used (where all activity types and years are treated equally) as base solutions, to then be potentially improved with a local search. However, this is not the only optimisation that should be performed. A restriction on which activities can be completed in which time periods is a starting point from which more detailed scheduling should occur. For each period a set of desired vessels should be determined, keeping in mind costs of (de)commissioning vessels and restrictions on timespans for that. A schedule should be made for each vessel such that each task is assigned a vessel and a timeslot. For this there are various optimisation techniques possible. The basic one to go to would be trying to solve an integer program, in which task durations can be the expected time within a time period (month) based on expected weather. A solution would then have to be checked through simulation, and the simulator described in \Cref{s:sim} is designed to be used for this. This may be difficult to do in a way that is computationally feasible in a reasonable time, but that is one of the challenges of this research, and there is a lot of literature on improving simulations when necessary. However, if this turns out to not be feasible there are alternatives for the optimisation technique that might speed up the process. 
 
 \subobjtwo*
 
