--- a/Annual Review 2019 Report/mybib.bib
+++ b/Annual Review 2019 Report/mybib.bib
@@ -21,21 +21,21 @@
 
 @inproceedings{barlow2014assessment,
   title={An assessment of vessel characteristics for the installation of offshore wind farms},
-  author={Barlow, E and Tezcaner Ozturk, D and Day, S and Boulougouris, E and Revie, M and Akartunali, K},
+  author={Barlow, E and Tezcaner {\"O}zt{\"u}rk, D and Day, S and Boulougouris, E and Revie, M and Akartunal{\i}, K},
   booktitle={International Conference on Marine Technology ICMT 2014},
   year={2014}
 }
 
 @article{barlow2017using,
   title={On using simulation to model the installation process logistics for an offshore wind farm},
-  author={Barlow, Euan and Tezcaner Ozturk, Diclehan and Revie, Matthew and Akartunali, Kerem and Day, Alexander and Boulougouris, Evangelos},
+  author={Barlow, Euan and Tezcaner {\"O}zt{\"u}rk, Diclehan and Revie, Matthew and Akartunal{\i}, Kerem and Day, Alexander and Boulougouris, Evangelos},
   year={2017},
   publisher={University of Strathclyde}
 }
 
 @article{barlow2014support,
   title={A support tool for assessing the risks of heavy lift vessel logistics in the installation of offshore wind farms},
-  author={Barlow, E and Tezcaner Ozturk, D and Day, AH and Boulougouris, E and Revie, M and Akartunali, K},
+  author={Barlow, E and Tezcaner {\"O}zt{\"u}rk, D and Day, AH and Boulougouris, E and Revie, M and Akartunal{\i}, K},
   journal={Marine Heavy Transport \& Lift IV},
   year={2014}
 }
@@ -43,7 +43,7 @@
 @article{herroelen2005project,
   title={Project scheduling under uncertainty: Survey and research potentials},
   author={Herroelen, Willy and Leus, Roel},
-  journal={European journal of operational research},
+  journal={European Journal of Operational Research},
   volume={165},
   number={2},
   pages={289--306},
@@ -83,7 +83,7 @@
 @article{fisher1981lagrangian,
   title={The Lagrangian relaxation method for solving integer programming problems},
   author={Fisher, Marshall L},
-  journal={Management science},
+  journal={Management Science},
   volume={27},
   number={1},
   pages={1--18},
@@ -94,7 +94,7 @@
 @article{barnhart1998branch,
   title={Branch-and-price: Column generation for solving huge integer programs},
   author={Barnhart, Cynthia and Johnson, Ellis L and Nemhauser, George L and Savelsbergh, Martin WP and Vance, Pamela H},
-  journal={Operations research},
+  journal={Operations Research},
   volume={46},
   number={3},
   pages={316--329},
@@ -122,7 +122,7 @@
 }
 
 @article{kaiser2010offshore,
-  title={Offshore wind energy installation and decommissioning cost estimation in the us outer continental shelf},
+  title={Offshore wind energy installation and decommissioning cost estimation in the US outer continental shelf},
   author={Kaiser, Mark J and Snyder, Brian},
   journal={US Dept. of the Interior, Bureau of Ocean Energy Management, Regulation and Enforcement, Herndon, VA TA\&R},
   volume={648},
@@ -246,7 +246,7 @@
 @article{gabrel2014recent,
   title={Recent advances in robust optimization: An overview},
   author={Gabrel, Virginie and Murat, C{\'e}cile and Thiele, Aur{\'e}lie},
-  journal={European journal of operational research},
+  journal={European Journal of Operational Research},
   volume={235},
   number={3},
   pages={471--483},
